# msc-thesis

./: .gitignore  README.md  analysis.ipynb  etc.sh  pyproject.toml
autocommit/: analysis.ipynb  apply.py  build_dep_analysis.py  cli.py  cluster.py  commit.py  commit_message.py  ddmin.py  dep_analysis.py  diff.py  etc.py  full.patch  group.py  llm_group.py  metrics.py  run_state.json
autocommit/results/: groups.csv  runs.csv
autocommit/tests/18e5e7850-5hunks/: gt-commit1.patch  gt-commit2.patch  gt-commit3.patch  metadata.json  tangled.patch
autocommit/tests/18e5e7850-5hunks/runs/20260628_221153/build_graph/: build_graph_0003.patch  build_graph_0004.patch
autocommit/tests/18e5e7850-5hunks/runs/20260628_221153/groups/: group_0001.patch  group_0002.patch  group_0004.patch  group_0005.patch
autocommit/tests/1fe68f0d53-8hunks/: gt-commit1.patch  gt-commit2.patch  gt-commit3.patch  tangled.patch
autocommit/tests/465cbd0a8-49hunks/: gt-commit1.patch  gt-commit2.patch  metadata.json  tangled.patch
autocommit/tests/889ac3bf1-75hunks/: gt-commit1.patch  gt-commit2.patch  gt-commit3.patch  tangled.patch
autocommit/tests/889ac3bf1-75hunks/runs/manual/: full.patch  remaining_iter_2.patch  remaining_iter_3.patch  remaining_iter_4.patch  remaining_iter_5.patch
autocommit/tests/ac9e31c5a-13hunks/: gt-commit1.patch  gt-commit2.patch  metadata.json  tangled.patch
autocommit/tests/dd25e301a-5hunks/: gt-commit1.patch  metadata.json  tangled.patch
scripts/: etc.py  etc.sh  group.py
tests/: test_adjusted_patch.py  test_diff.py
(+579 files in other folders)
