[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocommit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
etc = "autocommit.etc:main"

[tool.hatchling.build.targets.wheel]
packages = ["autocommit"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
